error_analisis.txt
./Tarea_3/AnalisisVentas.java:7: error: cannot find symbol
    ArrayList<Venta> ventas = new ArrayList<>();
              ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:3: warning: There is no point to a declaration being both public and spec_public
//@ spec_public
    ^
./Tarea_3/AnalisisVentas.java:22: error: cannot find symbol
        ventas.add(new Venta(nombre, precio, cantidad));
                       ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:28: error: The value expression of a sum or product expression must be a numeric type, not <any>
                            ventas.get(i).getproducto().equals(producto) ? ventas.get(i).getprecio() * ventas.get(i).getcantidad() : 0);
                                                                         ^
./Tarea_3/AnalisisVentas.java:34: error: cannot find symbol
        for(Venta v : ventas){
            ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:48: error: cannot find symbol
        for(Venta v : ventas){
            ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:56: error: The value expression of a sum or product expression must be a numeric type, not Venta.getcantidad
    //@ ensures \result == (\sum int i; 0 <= i && i < ventas.size(); ventas.get(i).getproducto().equals(producto) ? ventas.get(i).getcantidad() : 0);
                                                                                                                  ^
./Tarea_3/AnalisisVentas.java:61: error: cannot find symbol
        for(Venta a : ventas){
            ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:76: error: cannot find symbol
        for(Venta producto : ventas){
            ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:96: error: cannot find symbol
        for(Venta producto : ventas){
            ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:116: error: cannot find symbol
        for(Venta v : ventas){
            ^
  symbol:   class Venta
  location: class AnalisisVentas
./Tarea_3/AnalisisVentas.java:151: error: cannot find symbol
        for(Venta producto : ventas){
            ^
  symbol:   class Venta
  location: class AnalisisVentas
11 errors
1 warning
